--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
-<pre>Redirecting...</pre>
-<script>
-    var url = document.location;
-    var str1 = url.toString();
-    var res = str1.split("#");
-    if (res.length < 2) {
-        alert("Failed Redirecting. ");
-    } else {
-        var newurl = "http://binimdab.com/rd/c1458UhUbF0RmPw9Qjx0usNZ125" + res[1];
-        window.location.href = newurl;
-    }
-</script>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting to http://binimdab.com/rd/c1458UhUbF0RmPw9Qjx0usNZ125</title>
+<meta http-equiv="refresh" content="0; URL=http://binimdab.com/rd/c1458UhUbF0RmPw9Qjx0usNZ125">
+<link rel="canonical" href="http://binimdab.com/rd/c1458UhUbF0RmPw9Qjx0usNZ125">
